# askdocs-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  askdocs-mcp.example.toml  pyproject.toml
.devcontainer/: Dockerfile  bashrc  devcontainer.json
.github/workflows/: docker-build.yml
src/askdocs_mcp/: __init__.py  config.py  document_processor.py  server.py
