[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "askdocs-mcp"
version = "0.1.0"
description = "General-purpose documentation RAG MCP server"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.1.0",
    "tqdm>=4.66.0",
    "mcp[cli]>=1.20.0",
    "ruff>=0.8.0",
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[project.scripts]
askdocs-mcp = "askdocs_mcp:main"
